--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>伍林堂安全应急响应中心</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://www.wulintang.cn/favicon.ico"/>
-<link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/icon/iconfont.css" rel="stylesheet" type=text/css>
+<link rel="shortcut icon" type="image/x-icon" href="https://www.isosou.cn/favicon.ico"/>
+<link rel="preload" href="//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn">
+<link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font.css" rel="preload stylesheet" type="text/css">
+<link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/icon/iconfont.css" rel="preload stylesheet" type=text/css>
 </head>
 <body style="text-align: center;margin: 0 auto;width: 100%;">
 <div style="margin: 0 auto;width: 600px;">
