--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <p style="padding: 20px;background: #dedede;border-radius: 5px;">通过 <a href="https://www.wulintang.cn/" target="_blank" style="color: #000;text-decoration: none;">南通伍林堂文化传播有限公司</a> 官网的商务合作客服取得联系，并以此获得我司API权限。</p>
   <p>一般情况下，访问我司禁止开放资源本质就是违法行为，我司判定访问IP后会作出相应法律应急处理。</p>
   <p style="text-align: right;"><i class="iconfont icon-wulintanganquanyingjixiangyingzhongxin" style="font-size: 20px;margin-right: 2px;vertical-align: middle;"></i>伍林堂安全应急响应中心</p>
-    <p style="text-align: center;color: #000;"><a href="http://beian.miit.gov.cn/" target="_blank" rel="nofollow" style="text-decoration:none;color: #000;">苏ICP备2021008246号-30</a>、<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32061202001205" target="_blank" rel="nofollow" style="color: #000;text-decoration:none;">苏公网安备32061202001205号</a></p>
+  <p style="text-align: center;color: #000;">CDN数据源存储于<a href="https://cloud.tencent.com/act/cps/redirect?redirect=2182&cps_key=49716edce3a6c8b2f1df7249791dcd72&from=console" target="_blank" rel="nofollow" style="color: #000;text-decoration:none;">腾讯云</a>，中继IP由 <a href="https://www.ccwadj.com/" target="_blank" rel="nofollow" style="color: #000;text-decoration:none;">云之道数据</a> 提供区域分配</p>  
+  <p style="text-align: center;color: #000;"><a href="http://beian.miit.gov.cn/" target="_blank" rel="nofollow" style="text-decoration:none;color: #000;">苏ICP备2021008246号-30</a>、<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32061202001205" target="_blank" rel="nofollow" style="color: #000;text-decoration:none;">苏公网安备32061202001205号</a></p>
       <p style="text-align: center;color: #000;">© <a href="//www.wulintang.cn/" target="_blank" style="text-decoration:none;color: #000;">南通伍林堂文化传播有限公司</a> 版权所有</p>
  </div>
 </div>
