--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preload" href="//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn">
 <link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font.css" rel="preload stylesheet" type="text/css">
 <link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/icon/iconfont.css" rel="preload stylesheet" type=text/css>
+<script async defer data-website-id="861b74fe-ce9c-4d36-aa8f-283f92cfa988" src="https://tongji.wulintang.cn/umami.js"></script>
 </head>
 <body style="text-align: center;margin: 0 auto;width: 100%;">
 <div style="margin: 0 auto;width: 600px;">
