--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>伍林堂安全应急响应中心</title>
 <link rel="shortcut icon" type="image/x-icon" href="https://www.isosou.cn/favicon.ico"/>
-<link rel="preload" href="//www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn">
-<link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/font.css" rel="preload stylesheet" type="text/css">
-<link href="https://www.abcdefghijklmnopqrstuvwxyzzyxwvutsrqponmlkjihgfedcba.cn/ziti/icon/iconfont.css" rel="preload stylesheet" type=text/css>
+<link rel="preload" href="//cdn.jsdelivr.net">
+<link href="https://cdn.jsdelivr.net/gh/wulintang/cdn@1.0/ziti/font.css" rel="preload stylesheet" type="text/css">
+<link href="https://cdn.jsdelivr.net/gh/wulintang/cdn@1.0/ziti/icon/iconfont.css" rel="preload stylesheet" type=text/css>
 <script async src="https://tongji.wulintang.cn/wulintang" data-website-id="861b74fe-ce9c-4d36-aa8f-283f92cfa988"></script>
 </head>
 <body style="text-align: center;margin: 0 auto;width: 100%;">
