--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>伍林堂安全应急响应中心</title>
 <link rel="shortcut icon" type="image/x-icon" href="https://www.isosou.cn/favicon.ico"/>
 <link rel="preload" href="//cdn.jsdelivr.net">
-<link href="https://cdn.jsdelivr.net/gh/wulintang/cdn/ziti/font.css" rel="preload stylesheet" type="text/css">
-<link href="https://cdn.jsdelivr.net/gh/wulintang/cdn/ziti/icon/iconfont.css" rel="preload stylesheet" type=text/css>
+<link href="https://cdn.jsdelivr.net/gh/wulintang/cdn@1.0/ziti/font.css" rel="preload stylesheet" type="text/css">
+<link href="https://cdn.jsdelivr.net/gh/wulintang/cdn@1.0/ziti/icon/iconfont.css" rel="preload stylesheet" type=text/css>
 <script async src="https://tongji.wulintang.cn/wulintang" data-website-id="861b74fe-ce9c-4d36-aa8f-283f92cfa988"></script>
 </head>
 <body style="text-align: center;margin: 0 auto;width: 100%;">
